fix unexpected output: line break in note items

--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,11 @@ h1, h2, h3, h4{
     margin-top: 10px;
     border: 1px solid #DDDDDD;
 }
+
+.respective-note pre{
+    background-color: #ffffff;
+    padding:0;
+    margin:0;
+    border: none;
+
+}
